Resolves: tdf#150766 Listen to entire shared formula group instead of a slice

Change-Id: I677602bd3401dbd401e35f7db64cd34d164d9d92
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139744
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit 0919d8a389cba5626c14b08549243546830cfb8d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139662
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>